RESOLVED FIXED301920
REGRESSION(302293@main): [WPE] Build broken when targeting Android
https://bugs.webkit.org/show_bug.cgi?id=301920
Summary REGRESSION(302293@main): [WPE] Build broken when targeting Android
Adrian Perez
Reported 2025-11-04 02:56:11 PST
.../Source/WebKit/WebProcess/WebPage/glib/WebPageGLib.cpp:296:50: error: no member named 'modifiers' in 'WebCore::GLDisplay::BufferFormat' 296 | return { format.fourcc.value, format.modifiers }; | ~~~~~~ ^
Attachments
Adrian Perez
Comment 1 2025-11-04 03:05:10 PST
EWS
Comment 2 2025-11-04 05:32:09 PST
Committed 302533@main (520ba67a325c): <https://commits.webkit.org/302533@main> Reviewed commits have been landed. Closing PR #53387 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.