REGRESSION(302293@main): [WPE] Build broken when targeting Android https://bugs.webkit.org/show_bug.cgi?id=301920

Reviewed by Sergio Villar Senin.

* Source/WebKit/WebProcess/WebPage/glib/WebPageGLib.cpp:
(WebKit::WebPage::getRenderProcessInfo): Add a missing USE(GBM) guard
to avoid accessing the .modifiers field when it is not available.

Canonical link: https://commits.webkit.org/302533@main